@@ -1,7 +1,7 @@
 package fi.livi.digitraffic.tie.service.weathercam;
 
-import static fi.livi.digitraffic.common.util.TimeUtil.getZonedDateTimeNowWithoutMillisAtUtc;
-import static fi.livi.digitraffic.tie.helper.AssertHelper.assertCollectionSize;
+import static fi.livi.digitraffic.common.util.TimeUtil.nowWithoutMillis;
+import static fi.livi.digitraffic.test.util.AssertUtil.assertCollectionSize;
 import static fi.livi.digitraffic.tie.service.weathercam.CameraPresetHistoryDataService.MAX_IDS_SIZE;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -41,11 +41,11 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.test.mock.mockito.SpyBean;
 import org.springframework.test.annotation.Rollback;
+import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 
 import fi.livi.digitraffic.common.util.ThreadUtil;
-import fi.livi.digitraffic.common.util.TimeUtil;
+import fi.livi.digitraffic.test.util.AssertUtil;
 import fi.livi.digitraffic.tie.AbstractDaemonTest;
 import fi.livi.digitraffic.tie.TestUtils;
 import fi.livi.digitraffic.tie.conf.amazon.WeathercamS3Properties;
@@ -56,7 +56,6 @@ import fi.livi.digitraffic.tie.dto.v1.camera.CameraHistoryPresencesDto;
 import fi.livi.digitraffic.tie.dto.v1.camera.PresetHistoryChangeDto;
 import fi.livi.digitraffic.tie.dto.v1.camera.PresetHistoryDto;
 import fi.livi.digitraffic.tie.dto.v1.camera.PresetHistoryPresenceDto;
-import fi.livi.digitraffic.tie.helper.AssertHelper;
 import fi.livi.digitraffic.tie.model.roadstation.RoadStation;
 import fi.livi.digitraffic.tie.model.weathercam.CameraPreset;
 import fi.livi.digitraffic.tie.model.weathercam.CameraPresetHistory;
@@ -68,7 +67,7 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
 
     private static final Logger log = LoggerFactory.getLogger(CameraPresetHistoryServiceTest.class);
 
-    @SpyBean
+    @MockitoSpyBean
     private CameraPresetService cameraPresetService;
 
     @Autowired
@@ -83,7 +82,7 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
     @Autowired
     private CameraPresetHistoryDataService cameraPresetHistoryDataService;
 
-    @SpyBean
+    @MockitoSpyBean
     private CameraImageUpdateHandler cameraImageUpdateHandler;
 
     @Autowired
@@ -116,8 +115,8 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
         assertTrue(cp.isPresent());
 
         final CameraPreset preset = cp.get();
-        final ZonedDateTime now = getZonedDateTimeNowWithoutMillisAtUtc();
-        final CameraPresetHistory history = generateHistory(preset, now.minusMinutes(1));
+        final Instant now = nowWithoutMillis();
+        final CameraPresetHistory history = generateHistory(preset, now.minus(1, ChronoUnit.MINUTES));
         cameraPresetHistoryUpdateService.saveHistory(history);
 
         final CameraPresetHistory found =
@@ -145,7 +144,7 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
                     cameraPresetHistoryDataService.findAllByPresetIdInclSecretAscInternal(presetId);
             assertEquals(5, histories.size());
 
-            ZonedDateTime prevDate = null;
+            Instant prevDate = null;
             for (final CameraPresetHistory h : histories) {
                 assertEquals(presetId, h.getPresetId());
                 if (prevDate != null) {
@@ -191,7 +190,7 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
         doNothing().when(cameraImageUpdateHandler).hideCurrentImageForPreset(any(CameraPreset.class));
 
         final List<String> presetIds = generateHistoryForPublicPresets(2, 5);
-        final String modifiedPresetId = presetIds.get(0);
+        final String modifiedPresetId = presetIds.getFirst();
         final String notModifiedPresetId = presetIds.get(1);
 
         final List<CameraPresetHistory> all =
@@ -217,7 +216,7 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
 
         final List<CameraPresetHistory> allUpdated =
                 cameraPresetHistoryDataService.findAllByPresetIdInclSecretAscInternal(modifiedPresetId);
-        assertEquals(true, allUpdated.get(0).getPublishable());
+        assertEquals(true, allUpdated.getFirst().getPublishable());
         assertEquals(true, allUpdated.get(1).getPublishable());
         assertEquals(false, allUpdated.get(2).getPublishable());
         assertEquals(false, allUpdated.get(3).getPublishable());
@@ -225,7 +224,7 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
 
         final List<CameraPresetHistory> allNotUpdated =
                 cameraPresetHistoryDataService.findAllByPresetIdInclSecretAscInternal(notModifiedPresetId);
-        assertEquals(true, allNotUpdated.get(0).getPublishable());
+        assertEquals(true, allNotUpdated.getFirst().getPublishable());
         assertEquals(true, allNotUpdated.get(1).getPublishable());
         assertEquals(true, allNotUpdated.get(2).getPublishable());
         assertEquals(true, allNotUpdated.get(3).getPublishable());
@@ -235,18 +234,17 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
     @Test
     public void historyUpdateInFuture() {
         final List<String> presetIds = generateHistoryForPublicPresets(1, 5);
-        final String presetId = presetIds.get(0);
+        final String presetId = presetIds.getFirst();
 
         final CameraPreset cp = cameraPresetService.findCameraPresetByPresetId(presetId);
         final RoadStation rs = cp.getRoadStation();
         rs.updatePublicity(true);
-        rs.updatePublicity(false,
-                getZonedDateTimeNowWithoutMillisAtUtc().plusDays(1)); // -> previous/now public, future secret
+        rs.updatePublicity(false, nowWithoutMillis().plus(1, ChronoUnit.DAYS)); // -> previous/now public, future secret
         cameraPresetHistoryUpdateService.updatePresetHistoryPublicityForCamera(rs);
         entityManager.flush();
         final List<CameraPresetHistory> allUpdated =
                 cameraPresetHistoryDataService.findAllByPresetIdInclSecretAscInternal(presetId);
-        assertEquals(true, allUpdated.get(0).getPublishable());
+        assertEquals(true, allUpdated.getFirst().getPublishable());
         assertEquals(true, allUpdated.get(1).getPublishable());
         assertEquals(true, allUpdated.get(2).getPublishable());
         assertEquals(true, allUpdated.get(3).getPublishable());
@@ -256,16 +254,16 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
     @Test
     public void cameraOrPresetPublicHistory() {
         final int historySize = TestUtils.getRandomId(21, 27);
-        final ZonedDateTime lastModified = getZonedDateTimeNowWithoutMillisAtUtc();
+        final Instant lastModified = nowWithoutMillis();
         final String cameraId = generateHistoryForCamera(historySize, lastModified);
         log.info("Generated history for camera {} from {} to {} (size {})", cameraId, lastModified,
-                lastModified.minusHours(historySize - 1), historySize);
+                lastModified.minus(historySize - 1, ChronoUnit.HOURS), historySize);
         // Get history for last 24 h
         final List<CameraHistoryDto> allHistory =
                 cameraPresetHistoryDataService.findCameraOrPresetPublicHistory(Collections.singletonList(cameraId),
                         (Instant) null);
         assertEquals(1, allHistory.size());
-        final CameraHistoryDto history = allHistory.get(0);
+        final CameraHistoryDto history = allHistory.getFirst();
         assertEquals(cameraId, history.cameraId);
         final List<PresetHistoryDto> presetsHistories = history.cameraHistory;
         assertTrue(presetsHistories.size() >= 2);
@@ -283,7 +281,7 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
             // Generation creates history for ever hour and oldest is 24h -> max 24 stk.
             assertEquals(Math.min(historySize, 24), ph.presetHistory.size());
             IntStream.range(0, expectedHistorySize).forEach(i ->
-                    assertEquals(lastModified.minusHours(i), ph.presetHistory.get(i).getLastModified()));
+                    assertEquals(lastModified.minus(i, ChronoUnit.HOURS), ph.presetHistory.get(i).getLastModified()));
         });
 
         // Check that every url to image is unique
@@ -300,12 +298,12 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
     public void findCameraOrPresetHistoryPresencesNullId() {
         final List<String> presetIds = generateHistoryForPublicPresets(5, 1);
         final CameraPresetHistory secret =
-                cameraPresetHistoryDataService.findAllByPresetIdInclSecretAscInternal(presetIds.get(0)).get(0);
+                cameraPresetHistoryDataService.findAllByPresetIdInclSecretAscInternal(presetIds.getFirst()).getFirst();
         secret.setPublishable(false);
         entityManager.flush();
 
         final CameraHistoryPresencesDto allCameraPresences =
-                cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(null, (Instant) null, null);
+                cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(null, null, null);
         final List<PresetHistoryPresenceDto> allPresetPresences =
                 allCameraPresences.cameraHistoryPresences.stream().flatMap(c -> c.presetHistoryPresences.stream())
                         .toList();
@@ -323,12 +321,12 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
     @Test
     public void findCameraOrPresetHistoryPresences() {
         final List<String> presetIds = generateHistoryForPublicPresets(10, 1);
-        final String cameraId = presetIds.get(0).substring(0, 6);
+        final String cameraId = presetIds.getFirst().substring(0, 6);
         // Make sure there is other cameras too in history
         assertTrue(presetIds.stream().anyMatch(id -> !id.substring(0, 6).equals(cameraId)));
 
         final CameraHistoryPresencesDto cameraPresences =
-                cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(cameraId, (Instant) null, null);
+                cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(cameraId, null, null);
         final List<PresetHistoryPresenceDto> allPresetPresences =
                 cameraPresences.cameraHistoryPresences.stream().flatMap(c -> c.presetHistoryPresences.stream())
                         .toList();
@@ -345,20 +343,20 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
     @Test
     public void findPresetHistoryPresences() {
         final List<String> presetIds = generateHistoryForPublicPresets(10, 2);
-        final String presetId = presetIds.get(0);
+        final String presetId = presetIds.getFirst();
         // Make sure there is other presets
         assertTrue(presetIds.stream().anyMatch(id -> !id.equals(presetId)));
 
         final CameraHistoryPresencesDto cameraPresences =
-                cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(presetId, (Instant) null, null);
+                cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(presetId, null, null);
         final List<PresetHistoryPresenceDto> presetPresences =
                 cameraPresences.cameraHistoryPresences.stream().flatMap(c -> c.presetHistoryPresences.stream())
                         .toList();
 
         // history should exist only for given preset
         assertEquals(1, presetPresences.size());
-        assertEquals(presetId, presetPresences.get(0).getPresetId());
-        assertTrue(presetPresences.get(0).isHistoryPresent());
+        assertEquals(presetId, presetPresences.getFirst().getPresetId());
+        assertTrue(presetPresences.getFirst().isHistoryPresent());
     }
 
     @Test
@@ -366,11 +364,11 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
         final Optional<CameraPreset> cp = cameraPresetService.findAllPublishableCameraPresets().stream().findFirst();
         assertTrue(cp.isPresent());
         final CameraPreset preset = cp.get();
-        final ZonedDateTime now = getZonedDateTimeNowWithoutMillisAtUtc();
+        final Instant now = nowWithoutMillis();
         final CameraPresetHistory history0 = generateHistory(preset, now);
-        final CameraPresetHistory history1 = generateHistory(preset, now.minusMinutes(1), false);
-        final CameraPresetHistory history2 = generateHistory(preset, now.minusMinutes(2), false);
-        final CameraPresetHistory history3 = generateHistory(preset, now.minusMinutes(3));
+        final CameraPresetHistory history1 = generateHistory(preset, now.minus(1, ChronoUnit.MINUTES), false);
+        final CameraPresetHistory history2 = generateHistory(preset, now.minus(2, ChronoUnit.MINUTES), false);
+        final CameraPresetHistory history3 = generateHistory(preset, now.minus(3, ChronoUnit.MINUTES));
         cameraPresetHistoryUpdateService.saveHistory(history0);
         cameraPresetHistoryUpdateService.saveHistory(history1);
         cameraPresetHistoryUpdateService.saveHistory(history2);
@@ -380,26 +378,26 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
         // Only secret at given time interval
         final CameraHistoryPresencesDto cameraPresences1 =
                 cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(preset.getPresetId(),
-                        now.minusMinutes(2), now.minusMinutes(1));
+                        now.minus(2, ChronoUnit.MINUTES), now.minus(1, ChronoUnit.MINUTES));
         assertEquals(1, cameraPresences1.cameraHistoryPresences.size());
-        assertEquals(1, cameraPresences1.cameraHistoryPresences.get(0).presetHistoryPresences.size());
-        assertFalse(cameraPresences1.cameraHistoryPresences.get(0).presetHistoryPresences.get(0).isHistoryPresent());
+        assertEquals(1, cameraPresences1.cameraHistoryPresences.getFirst().presetHistoryPresences.size());
+        assertFalse(cameraPresences1.cameraHistoryPresences.getFirst().presetHistoryPresences.getFirst().isHistoryPresent());
 
         // One public at given time interval
         final CameraHistoryPresencesDto cameraPresences2 =
                 cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(preset.getPresetId(),
-                        now.minusMinutes(2), now);
+                        now.minus(2, ChronoUnit.MINUTES), now);
         assertEquals(1, cameraPresences2.cameraHistoryPresences.size());
-        assertEquals(1, cameraPresences2.cameraHistoryPresences.get(0).presetHistoryPresences.size());
-        assertTrue(cameraPresences2.cameraHistoryPresences.get(0).presetHistoryPresences.get(0).isHistoryPresent());
+        assertEquals(1, cameraPresences2.cameraHistoryPresences.getFirst().presetHistoryPresences.size());
+        assertTrue(cameraPresences2.cameraHistoryPresences.getFirst().presetHistoryPresences.getFirst().isHistoryPresent());
 
         // One public at given time interval
         final CameraHistoryPresencesDto cameraPresences3 =
                 cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(preset.getPresetId(),
-                        now.minusMinutes(3), now.minusMinutes(1));
+                        now.minus(3, ChronoUnit.MINUTES), now.minus(1, ChronoUnit.MINUTES));
         assertEquals(1, cameraPresences3.cameraHistoryPresences.size());
-        assertEquals(1, cameraPresences3.cameraHistoryPresences.get(0).presetHistoryPresences.size());
-        assertTrue(cameraPresences3.cameraHistoryPresences.get(0).presetHistoryPresences.get(0).isHistoryPresent());
+        assertEquals(1, cameraPresences3.cameraHistoryPresences.getFirst().presetHistoryPresences.size());
+        assertTrue(cameraPresences3.cameraHistoryPresences.getFirst().presetHistoryPresences.getFirst().isHistoryPresent());
     }
 
     @Test
@@ -407,14 +405,14 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
         final Optional<CameraPreset> cp = cameraPresetService.findAllPublishableCameraPresets().stream().findFirst();
         assertTrue(cp.isPresent());
         final CameraPreset preset = cp.get();
-        final ZonedDateTime now = getZonedDateTimeNowWithoutMillisAtUtc();
-        generateHistory(preset, now.minusMinutes(1));
-        generateHistory(preset, now.minusMinutes(2), false);
+        final Instant now = nowWithoutMillis();
+        generateHistory(preset, now.minus(1, ChronoUnit.MINUTES));
+        generateHistory(preset, now.minus(2, ChronoUnit.MINUTES), false);
 
         // Make sure there is other cameras too in history
         final CameraPresetHistory h1 =
                 cameraPresetHistoryDataService.findLatestWithPresetIdIncSecretInternal(preset.getPresetId());
-        assertEquals(now.minusMinutes(1), h1.getLastModified());
+        assertEquals(now.minus(1, ChronoUnit.MINUTES), h1.getLastModified());
         assertTrue(h1.getPublishable());
 
         generateHistory(preset, now, false);
@@ -429,18 +427,18 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
         final Optional<CameraPreset> cp = cameraPresetService.findAllPublishableCameraPresets().stream().findFirst();
         assertTrue(cp.isPresent());
         final CameraPreset preset = cp.get();
-        final ZonedDateTime now = getZonedDateTimeNowWithoutMillisAtUtc();
+        final Instant now = nowWithoutMillis();
         generateHistory(preset, now, false);
-        generateHistory(preset, now.minusMinutes(1));
-        generateHistory(preset, now.minusMinutes(2), false);
+        generateHistory(preset, now.minus(1, ChronoUnit.MINUTES));
+        generateHistory(preset, now.minus(2, ChronoUnit.MINUTES), false);
 
         final List<CameraPresetHistory> history =
                 cameraPresetHistoryDataService.findAllByPresetIdInclSecretAscInternal(preset.getPresetId());
 
-        assertEquals(now.minusMinutes(2), history.get(0).getLastModified());
-        assertFalse(history.get(0).getPublishable());
+        assertEquals(now.minus(2, ChronoUnit.MINUTES), history.getFirst().getLastModified());
+        assertFalse(history.getFirst().getPublishable());
 
-        assertEquals(now.minusMinutes(1), history.get(1).getLastModified());
+        assertEquals(now.minus(1, ChronoUnit.MINUTES), history.get(1).getLastModified());
         assertTrue(history.get(1).getPublishable());
 
         assertEquals(now, history.get(2).getLastModified());
@@ -451,25 +449,25 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
     @Test
     public void deleteAllWithPresetId() {
         final List<String> presetIds = generateHistoryForPublicPresets(10, 2);
-        final String presetIdToDelete = presetIds.get(0);
+        final String presetIdToDelete = presetIds.getFirst();
         final String presetIdNotToDelete = presetIds.get(2);
         // Make sure there is other presets
         assertTrue(presetIds.stream().anyMatch(id -> !id.equals(presetIdNotToDelete)));
 
         final CameraHistoryPresencesDto presetPresencesToDelete =
-                cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(presetIdToDelete, (Instant) null,
+                cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(presetIdToDelete, null,
                         null);
         final CameraHistoryPresencesDto presetPresencesNotToDelete =
-                cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(presetIdNotToDelete, (Instant) null,
+                cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(presetIdNotToDelete, null,
                         null);
 
         final PresetHistoryPresenceDto deleter =
-                presetPresencesToDelete.cameraHistoryPresences.get(0).presetHistoryPresences.get(0);
+                presetPresencesToDelete.cameraHistoryPresences.getFirst().presetHistoryPresences.getFirst();
         assertEquals(presetIdToDelete, deleter.getPresetId());
         assertTrue(deleter.isHistoryPresent(), presetIdToDelete);
 
         final PresetHistoryPresenceDto notDelete =
-                presetPresencesNotToDelete.cameraHistoryPresences.get(0).presetHistoryPresences.get(0);
+                presetPresencesNotToDelete.cameraHistoryPresences.getFirst().presetHistoryPresences.getFirst();
         assertEquals(presetIdNotToDelete, notDelete.getPresetId());
         assertTrue(notDelete.isHistoryPresent(), presetIdNotToDelete);
 
@@ -477,15 +475,15 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
 
         boolean exception = false;
         try {
-            cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(presetIdToDelete, (Instant) null, null);
+            cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(presetIdToDelete, null, null);
         } catch (final ObjectNotFoundException e) {
             exception = true;
         }
         assertTrue(exception);
         final CameraHistoryPresencesDto notDeleted =
-                cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(presetIdNotToDelete, (Instant) null,
+                cameraPresetHistoryDataService.findCameraOrPresetHistoryPresences(presetIdNotToDelete, null,
                         null);
-        assertTrue(notDeleted.cameraHistoryPresences.get(0).presetHistoryPresences.get(0).isHistoryPresent(),
+        assertTrue(notDeleted.cameraHistoryPresences.getFirst().presetHistoryPresences.getFirst().isHistoryPresent(),
                 presetIdNotToDelete);
 
     }
@@ -496,9 +494,9 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
         assertTrue(cp.isPresent());
         final CameraPreset preset = cp.get();
         final String presetId = preset.getPresetId();
-        final ZonedDateTime now = getZonedDateTimeNowWithoutMillisAtUtc();
-        final CameraPresetHistory publicHistory = generateHistory(preset, now.minusMinutes(1));
-        final CameraPresetHistory publicHistoryTooOld = generateHistory(preset, now.minusDays(2));
+        final Instant now = nowWithoutMillis();
+        final CameraPresetHistory publicHistory = generateHistory(preset, now.minus(1, ChronoUnit.MINUTES));
+        final CameraPresetHistory publicHistoryTooOld = generateHistory(preset, now.minus(2, ChronoUnit.DAYS));
         final CameraPresetHistory secretHistory = generateHistory(preset, now, false);
 
         final HistoryStatus statusPublic =
@@ -561,7 +559,7 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
             final boolean changeTo = i % 2 == 0; // 1:false -> 2:true -> 3:false
             final int changesCount = 4 - i;
             final int index = historySize * i / 4;
-            final ZonedDateTime changedOn = TimeUtil.toZonedDateTimeAtUtc(allAfter.get(index).getModified());
+            final Instant changedOn = allAfter.get(index).getModified();
             log.info("Find changes from index {}/{} change to {} on {}", index, historySize, changeTo, changedOn);
 
             final List<PresetHistoryChangeDto> changesAfter =
@@ -577,14 +575,14 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
             assertEquals(changesAfter.size() + 1, changesBefore.size());
             assertCollectionSize(changesCount, changesBefore);
 
-            final PresetHistoryChangeDto oldestChange = changesBefore.get(0);
+            final PresetHistoryChangeDto oldestChange = changesBefore.getFirst();
             log.info("Found {} change to {}, lastModified on {} and modified on {}",
                     oldestChange.getPresetId(), oldestChange.getPublishableTo(), oldestChange.getLastModified(),
                     oldestChange.getModified());
             // First change in result should match change status
-            assertEquals(changeTo, changesBefore.get(0).getPublishableTo());
+            assertEquals(changeTo, changesBefore.getFirst().getPublishableTo());
             // Last change in result should have the latest change time
-            assertEquals(changesBefore.get(changesBefore.size() - 1).getModified(), changesBeforeDto.latestChange);
+            assertEquals(changesBefore.getLast().getModified(), changesBeforeDto.latestChange);
         });
     }
 
@@ -603,10 +601,10 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
     @Test
     public void presetNotPublicInPast() {
         final CameraPreset preset = cameraPresetService.save(TestUtils.generateDummyPreset());
-        final ZonedDateTime T1 = getZonedDateTimeNowWithoutMillisAtUtc().minusHours(3);
-        final ZonedDateTime T2 = T1.plusHours(1);
-        final ZonedDateTime T3 = T1.plusHours(2);
-        final ZonedDateTime T4 = T1.plusHours(3);
+        final Instant T1 = nowWithoutMillis().minus(3, ChronoUnit.HOURS);
+        final Instant T2 = T1.plus(1, ChronoUnit.HOURS);
+        final Instant T3 = T1.plus(2, ChronoUnit.HOURS);
+        final Instant T4 = T1.plus(3, ChronoUnit.HOURS);
 
         // Set preset to be secret in T2
         preset.setPublic(true);
@@ -620,7 +618,7 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
         final List<CameraPresetHistory> historyBefore =
                 cameraPresetHistoryDataService.findAllByPresetIdInclSecretAscInternal(preset.getPresetId());
         assertCollectionSize(4, historyBefore);
-        assertFalse(historyBefore.get(0).getPublishable()); // T1
+        assertFalse(historyBefore.getFirst().getPublishable()); // T1
         assertFalse(historyBefore.get(1).getPublishable()); // T2
         assertFalse(historyBefore.get(2).getPublishable()); // T3
         assertTrue(historyBefore.get(3).getPublishable()); // T4
@@ -634,7 +632,7 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
 
         final List<CameraPresetHistory> historyAfter =
                 cameraPresetHistoryDataService.findAllByPresetIdInclSecretAscInternal(preset.getPresetId());
-        assertTrue(historyAfter.get(0).getPublishable()); // T1
+        assertTrue(historyAfter.getFirst().getPublishable()); // T1
         assertFalse(historyAfter.get(1).getPublishable()); // T2
         assertTrue(historyAfter.get(2).getPublishable()); // T3
         assertTrue(historyAfter.get(3).getPublishable()); // T4
@@ -644,14 +642,14 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
     public void deleteOlderThanHours() {
         final int historySize = TestUtils.getRandomId(40, 80);
         // handle possible gap between server and db times
-        final ZonedDateTime lastModified = getZonedDateTimeNowWithoutMillisAtUtc().plusMinutes(1);
+        final Instant lastModified = nowWithoutMillis().plus(1, ChronoUnit.MINUTES);
         // History for historySize-1 hours backwards
         final String cameraId = generateHistoryForCamera(historySize, lastModified);
         final List<CameraHistoryDto> history =
                 cameraPresetHistoryDataService.findCameraOrPresetPublicHistory(Collections.singletonList(cameraId),
                         (Instant) null);
         final long presetCount =
-                history.get(0).cameraHistory.stream().map(PresetHistoryDto::getPresetId).distinct().count();
+                history.getFirst().cameraHistory.stream().map(PresetHistoryDto::getPresetId).distinct().count();
         final List<CameraPresetHistory> allBeforeDelete = cameraPresetHistoryRepository.findAll();
         log.info("allBeforeDeleteSize {}, presetCount {}, historySize {}", allBeforeDelete.size(), presetCount,
                 historySize);
@@ -667,10 +665,10 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
         // All presets should have history of 25
         final Map<String, List<CameraPresetHistory>> historyPerPreset =
                 allAfterDelete.stream().collect(Collectors.groupingBy(CameraPresetHistory::getPresetId));
-        historyPerPreset.values().forEach(h -> AssertHelper.assertCollectionSize(25, h));
+        historyPerPreset.values().forEach(h -> AssertUtil.assertCollectionSize(25, h));
 
         // All history should be equal or newer than 24 h
-        final ZonedDateTime oldestLimit = lastModified.minusHours(24).minusSeconds(1);
+        final Instant oldestLimit = lastModified.minus(24, ChronoUnit.HOURS).minus(1, ChronoUnit.SECONDS);
         allAfterDelete.forEach(h -> assertTrue(h.getLastModified().isAfter(oldestLimit)));
     }
 
@@ -680,7 +678,7 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
     public void generateHistoryForInternalTesting() {
         final int historySize = TestUtils.getRandomId(40, 80);
         // handle possible gap between server and db times
-        final ZonedDateTime lastModified = getZonedDateTimeNowWithoutMillisAtUtc().plusSeconds(10);
+        final Instant lastModified = nowWithoutMillis().plusSeconds(10);
         // History for 39 hours backwards
         assertDoesNotThrow(() -> {
             generateHistoryForCamera(historySize, lastModified);
@@ -695,7 +693,7 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
      * @param lastModified Latest history item lastModified time. Others will have times with 1h decrement of previous.
      * @return Camera id
      */
-    private String generateHistoryForCamera(final int historySize, final ZonedDateTime lastModified) {
+    private String generateHistoryForCamera(final int historySize, final Instant lastModified) {
         final List<Map.Entry<String, List<CameraPreset>>> all =
                 cameraPresetService.findAllPublishableCameraPresets().stream()
                         .collect(Collectors.groupingBy(CameraPreset::getCameraId))
@@ -706,7 +704,7 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
                 all.stream().skip((int) (all.size() * Math.random())).findAny().orElseThrow();
 
         camera.getValue().forEach(cameraPreset -> IntStream.range(0, historySize)
-                .forEach(i -> generateHistory(cameraPreset, lastModified.minusHours(i))));
+                .forEach(i -> generateHistory(cameraPreset, lastModified.minus(i, ChronoUnit.HOURS))));
         return camera.getKey();
     }
 
@@ -714,20 +712,20 @@ public class CameraPresetHistoryServiceTest extends AbstractDaemonTest {
         final List<String> presetIds = new ArrayList<>();
         cameraPresetService.findAllPublishableCameraPresets().stream().limit(presetCount).forEach(cp -> {
             presetIds.add(cp.getPresetId());
-            final ZonedDateTime lastModified = getZonedDateTimeNowWithoutMillisAtUtc();
+            final Instant lastModified = nowWithoutMillis();
             IntStream.range(0, historyCountPerPreset).map(i -> historyCountPerPreset - i - 1).forEach(i -> {
                 log.info("Create history nr. {} for preset {}", i, cp.getPresetId());
-                generateHistory(cp, lastModified.minusMinutes(i));
+                generateHistory(cp, lastModified.minus(i, ChronoUnit.MINUTES));
             });
         });
         return presetIds;
     }
 
-    private CameraPresetHistory generateHistory(final CameraPreset preset, final ZonedDateTime lastModified) {
+    private CameraPresetHistory generateHistory(final CameraPreset preset, final Instant lastModified) {
         return generateHistory(preset, lastModified, true);
     }
 
-    private CameraPresetHistory generateHistory(final CameraPreset preset, final ZonedDateTime lastModified,
+    private CameraPresetHistory generateHistory(final CameraPreset preset, final Instant lastModified,
                                                 final boolean publishable) {
         final String versionId = RandomStringUtils.randomAlphanumeric(32);
         final CameraPresetHistory history =
